Try to use cuda stream

--- a/naunet/templates/cvode/include/naunet.h.j2
+++ b/naunet/templates/cvode/include/naunet.h.j2
@@ -5,6 +5,7 @@
 #include <sundials/sundials_math.h>   // contains the macros ABS, SUNSQR, EXP
 #include <sundials/sundials_types.h>  // defs. of realtype, sunindextype
 /* {% if info.method == "cusparse" -%} */
+#include <nvector/nvector_cuda.h>
 #include <sunlinsol/sunlinsol_cusolversp_batchqr.h>
 /* {% endif -%} */
 
@@ -22,10 +23,10 @@ class Naunet {
    public:
     Naunet();
     ~Naunet();
-    int Init(int nsystem = 1, double atol = 1e-20, double rtol = 1e-5);
+    int Init(int nsystem = MAX_NSYSTEMS, double atol = 1e-20, double rtol = 1e-5);
     int Finalize();
     /* {% if info.method == "cusparse" -%} */
-    int Reset(int nsystem = 1, double atol = 1e-20, double rtol = 1e-5);
+    int Reset(int nsystem = MAX_NSYSTEMS, double atol = 1e-20, double rtol = 1e-5);
     /* {% endif -%} */
     int Solve(realtype *ab, realtype dt, NaunetData *data);
 #ifdef PYMODULE
@@ -38,15 +39,26 @@ class Naunet {
     realtype atol_;
     realtype rtol_;
 
-    // NaunetData *m_data;
+    /* {% if info.method == "cusparse" -%} */
+
+    N_Vector cv_y_[NSTREAMS];
+    SUNMatrix cv_a_[NSTREAMS];
+    void *cv_mem_[NSTREAMS];
+    SUNLinearSolver cv_ls_[NSTREAMS];
+
+    cusparseHandle_t cusp_handle_[NSTREAMS];
+    cusolverSpHandle_t cusol_handle_[NSTREAMS];
+    cudaStream_t custream_[NSTREAMS];
+    SUNCudaThreadDirectExecPolicy *stream_exec_policy_[NSTREAMS];
+    SUNCudaBlockReduceExecPolicy *reduce_exec_policy_[NSTREAMS];
+
+    /* {% else %} */
+
     N_Vector cv_y_;
     SUNMatrix cv_a_;
     void *cv_mem_;
     SUNLinearSolver cv_ls_;
 
-    /* {% if info.method == "cusparse" -%} */
-    cusparseHandle_t cusp_handle_;
-    cusolverSpHandle_t cusol_handle_;
     /* {% endif %} */
 };
 
