--- a/naunet/templates/common/include/naunet_macros.h.j2
+++ b/naunet/templates/common/include/naunet_macros.h.j2
@@ -13,8 +13,12 @@
 {% endif %}
 {% if info.method == "cusparse" -%}
 #define USE_CUDA
-#define MAXNGROUPS 4096
+#define MAX_NSYSTEMS 4096
+#define NSTREAMS 16
+#define MAX_NSYSTEMS_PER_STREAM (MAX_NSYSTEMS/NSTREAMS)
 #define BLOCKSIZE 64
+{% else %}
+#define MAX_NSYSTEMS 1
 {% endif %}
 
 {% for idx in macros.speclist -%}
