--- a/naunet/templates/cvode/src/naunet_fex.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_fex.cpp.j2
@@ -20,7 +20,9 @@
 #include "naunet_macros.h"
 #include "naunet_physics.h"
 
-#define IJth(A, i, j) SM_ELEMENT_D(A, i, j)
+#define IJth(A, i, j)        SM_ELEMENT_D(A, i, j)
+#define NVEC_CUDA_CONTENT(x) ((N_VectorContent_Cuda)(x->content))
+#define NVEC_CUDA_STREAM(x)  (NVEC_CUDA_CONTENT(x)->stream_exec_policy->stream())
 
 /* {% if info.method == "cusparse" -%} */
 __global__ void FexKernel(realtype *y, realtype *ydot, NaunetData *d_udata,
@@ -109,6 +111,8 @@ int Fex(realtype t, N_Vector u, N_Vector udot, void *user_data) {
 
     /* {% elif info.method == "cusparse" -%} */
 
+    cudaStream_t stream = *(NVEC_CUDA_STREAM(u));
+
     realtype *y         = N_VGetDeviceArrayPointer_Cuda(u);
     realtype *ydot      = N_VGetDeviceArrayPointer_Cuda(udot);
     NaunetData *h_udata = (NaunetData *)user_data;
@@ -121,16 +125,16 @@ int Fex(realtype t, N_Vector u, N_Vector udot, void *user_data) {
 
     // copy the user data for each system/cell
     cudaMalloc((void **)&d_udata, sizeof(NaunetData) * nsystem);
-    cudaMemcpy(d_udata, h_udata, sizeof(NaunetData) * nsystem,
-               cudaMemcpyHostToDevice);
-    cudaDeviceSynchronize();
+    cudaMemcpyAsync(d_udata, h_udata, sizeof(NaunetData) * nsystem,
+               cudaMemcpyHostToDevice, stream);
+    // cudaDeviceSynchronize();
 
     unsigned block_size = min(BLOCKSIZE, nsystem);
     unsigned grid_size =
-        max(1, min(MAXNGROUPS / BLOCKSIZE, nsystem / BLOCKSIZE));
-    FexKernel<<<grid_size, block_size>>>(y, ydot, d_udata, nsystem);
+        max(1, min(MAX_NSYSTEMS_PER_STREAM / BLOCKSIZE, nsystem / BLOCKSIZE));
+    FexKernel<<<grid_size, block_size, 0, stream>>>(y, ydot, d_udata, nsystem);
 
-    cudaDeviceSynchronize();
+    // cudaDeviceSynchronize();
     cudaError_t cuerr = cudaGetLastError();
     if (cuerr != cudaSuccess) {
         fprintf(stderr, ">>> ERROR in fex: cudaGetLastError returned %s\n",
