--- a/naunet/templates/cvode/src/naunet_jac.cpp.j2
+++ b/naunet/templates/cvode/src/naunet_jac.cpp.j2
@@ -20,7 +20,9 @@
 #include "naunet_macros.h"
 #include "naunet_physics.h"
 
-#define IJth(A, i, j) SM_ELEMENT_D(A, i, j)
+#define IJth(A, i, j)        SM_ELEMENT_D(A, i, j)
+#define NVEC_CUDA_CONTENT(x) ((N_VectorContent_Cuda)(x->content))
+#define NVEC_CUDA_STREAM(x)  (NVEC_CUDA_CONTENT(x)->stream_exec_policy->stream())
 
 /* {% if info.method == "cusparse" -%} */
 int InitJac(SUNMatrix jmatrix) {
@@ -152,6 +154,9 @@ int Jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
     // clang-format on
 
     /* {% elif info.method == "cusparse" -%} */
+
+    cudaStream_t stream = *(NVEC_CUDA_STREAM(u));
+
     realtype *y         = N_VGetDeviceArrayPointer_Cuda(u);
     realtype *data      = SUNMatrix_cuSparse_Data(jmatrix);
     NaunetData *h_udata = (NaunetData *)user_data;
@@ -160,16 +165,16 @@ int Jac(realtype t, N_Vector u, N_Vector fu, SUNMatrix jmatrix, void *user_data,
     int nsystem = SUNMatrix_cuSparse_NumBlocks(jmatrix);
 
     cudaMalloc((void **)&d_udata, sizeof(NaunetData) * nsystem);
-    cudaMemcpy(d_udata, h_udata, sizeof(NaunetData) * nsystem,
-               cudaMemcpyHostToDevice);
-    cudaDeviceSynchronize();
+    cudaMemcpyAsync(d_udata, h_udata, sizeof(NaunetData) * nsystem,
+               cudaMemcpyHostToDevice, stream);
+    // cudaDeviceSynchronize();
 
     unsigned block_size = min(BLOCKSIZE, nsystem);
     unsigned grid_size =
-        max(1, min(MAXNGROUPS / BLOCKSIZE, nsystem / BLOCKSIZE));
-    JacKernel<<<grid_size, block_size>>>(y, data, d_udata, nsystem);
+        max(1, min(MAX_NSYSTEMS_PER_STREAM / BLOCKSIZE, nsystem / BLOCKSIZE));
+    JacKernel<<<grid_size, block_size, 0, stream>>>(y, data, d_udata, nsystem);
 
-    cudaDeviceSynchronize();
+    // cudaDeviceSynchronize();
     cudaError_t cuerr = cudaGetLastError();
     if (cuerr != cudaSuccess) {
         fprintf(stderr, ">>> ERROR in jac: cudaGetLastError returned %s\n",
