Create functions to evaluate heating/cooling rates

--- a/naunet/templates/common/include/naunet_macros.h.j2
+++ b/naunet/templates/common/include/naunet_macros.h.j2
@@ -8,6 +8,8 @@
 {{ macros.nspec }}
 {{ macros.neqns }}
 {{ macros.nreact }}
+{{ macros.nheating }}
+{{ macros.ncooling }}
 {% if info.method == "sparse" or info.method == "cusparse" -%}
 {{ macros.nnz }}
 {% endif %}
