Reduce memory allocation/deallocation

--- a/naunet/templates/cvode/include/naunet.h.j2
+++ b/naunet/templates/cvode/include/naunet.h.j2
@@ -53,6 +53,10 @@ class Naunet {
     SUNCudaThreadDirectExecPolicy *stream_exec_policy_[NSTREAMS];
     SUNCudaBlockReduceExecPolicy *reduce_exec_policy_[NSTREAMS];
 
+    // pinned host memory, required by cuda stream
+    realtype *h_ab;
+    NaunetData *h_data;
+
     /* {% else %} */
 
     N_Vector cv_y_;
