--- a/naunet/templates/cvode/src/naunet.cpp.j2
+++ b/naunet/templates/cvode/src/naunet.cpp.j2
@@ -71,8 +71,9 @@ Naunet::Naunet(){};
 
 Naunet::~Naunet(){};
 
-int Naunet::Init(int nsystem, double atol, double rtol) {
+int Naunet::Init(int nsystem, double atol, double rtol, int mxsteps) {
     n_system_ = nsystem;
+    mxsteps_  = mxsteps;
     atol_     = atol;
     rtol_     = rtol;
 
@@ -92,6 +93,8 @@ int Naunet::Init(int nsystem, double atol, double rtol) {
 
     flag = CVodeInit(cv_mem_, Fex, 0.0, cv_y_);
     if (check_flag(&flag, "CVodeInit", 1)) return 1;
+    flag = CVodeSetMaxNumSteps(cv_mem_, mxsteps_);
+    if (check_flag(&flag, "CVodeSetMaxNumSteps", 0)) return 1;
     flag = CVodeSStolerances(cv_mem_, rtol_, atol_);
     if (check_flag(&flag, "CVodeSStolerances", 1)) return 1;
     flag = CVodeSetLinearSolver(cv_mem_, cv_ls_, cv_a_);
@@ -115,6 +118,8 @@ int Naunet::Init(int nsystem, double atol, double rtol) {
 
     flag = CVodeInit(cv_mem_, Fex, 0.0, cv_y_);
     if (check_flag(&flag, "CVodeInit", 1)) return 1;
+    flag = CVodeSetMaxNumSteps(cv_mem_, mxsteps_);
+    if (check_flag(&flag, "CVodeSetMaxNumSteps", 0)) return 1;
     flag = CVodeSStolerances(cv_mem_, rtol_, atol_);
     if (check_flag(&flag, "CVodeSStolerances", 1)) return 1;
     flag = CVodeSetLinearSolver(cv_mem_, cv_ls_, cv_a_);
@@ -161,6 +166,8 @@ int Naunet::Init(int nsystem, double atol, double rtol) {
 
         flag = CVodeInit(cv_mem_[i], Fex, 0.0, cv_y_[i]);
         if (check_flag(&flag, "CVodeInit", 1)) return 1;
+        flag = CVodeSetMaxNumSteps(cv_mem_[i], mxsteps_);
+        if (check_flag(&flag, "CVodeSetMaxNumSteps", 0)) return 1;
         flag = CVodeSStolerances(cv_mem_[i], rtol_, atol_);
         if (check_flag(&flag, "CVodeSStolerances", 1)) return 1;
         flag = CVodeSetLinearSolver(cv_mem_[i], cv_ls_[i], cv_a_[i]);
@@ -230,7 +237,7 @@ int Naunet::Finalize() {
 
 /* {% if info.method == "cusparse" %} */
 // To reset the size of cusparse solver
-int Naunet::Reset(int nsystem, double atol, double rtol) {
+int Naunet::Reset(int nsystem, double atol, double rtol, int mxsteps) {
 
     // if (nsystem < NSTREAMS ||  nsystem % NSTREAMS != 0) {
     //     printf("Invalid size of system!");
@@ -240,6 +247,7 @@ int Naunet::Reset(int nsystem, double atol, double rtol) {
     n_stream_in_use_ = nsystem / NSTREAMS >= 32 ? NSTREAMS : 1;
 
     n_system_ = nsystem;
+    mxsteps_  = mxsteps;
     atol_     = atol;
     rtol_     = rtol;
 
@@ -273,6 +281,8 @@ int Naunet::Reset(int nsystem, double atol, double rtol) {
 
         flag = CVodeInit(cv_mem_[i], Fex, 0.0, cv_y_[i]);
         if (check_flag(&flag, "CVodeInit", 1)) return 1;
+        flag = CVodeSetMaxNumSteps(cv_mem_[i], mxsteps_);
+        if (check_flag(&flag, "CVodeSetMaxNumSteps", 0)) return 1;
         flag = CVodeSStolerances(cv_mem_[i], rtol_, atol_);
         if (check_flag(&flag, "CVodeSStolerances", 1)) return 1;
         flag = CVodeSetLinearSolver(cv_mem_[i], cv_ls_[i], cv_a_[i]);
