--- a/naunet/templates/cvode/src/naunet.cpp.j2
+++ b/naunet/templates/cvode/src/naunet.cpp.j2
@@ -204,6 +204,73 @@ int Naunet::Init(int nsystem, double atol, double rtol, int mxsteps) {
     return NAUNET_SUCCESS;
 };
 
+int Naunet::DebugInfo() {
+    long int nst, nfe, nsetups, nje, netf, nge, nni, ncfn;
+    int flag;
+
+    /* {% if info.method == "dense" or info.method == "sparse" -%} */
+
+    flag = CVodeGetNumSteps(cv_mem_, &nst);
+    check_flag(&flag, "CVodeGetNumSteps", 1);
+    flag = CVodeGetNumRhsEvals(cv_mem_, &nfe);
+    check_flag(&flag, "CVodeGetNumRhsEvals", 1);
+    flag = CVodeGetNumLinSolvSetups(cv_mem_, &nsetups);
+    check_flag(&flag, "CVodeGetNumLinSolvSetups", 1);
+    flag = CVodeGetNumErrTestFails(cv_mem_, &netf);
+    check_flag(&flag, "CVodeGetNumErrTestFails", 1);
+    flag = CVodeGetNumNonlinSolvIters(cv_mem_, &nni);
+    check_flag(&flag, "CVodeGetNumNonlinSolvIters", 1);
+    flag = CVodeGetNumNonlinSolvConvFails(cv_mem_, &ncfn);
+    check_flag(&flag, "CVodeGetNumNonlinSolvConvFails", 1);
+
+    flag = CVodeGetNumJacEvals(cv_mem_, &nje);
+    check_flag(&flag, "CVodeGetNumJacEvals", 1);
+
+    flag = CVodeGetNumGEvals(cv_mem_, &nge);
+    check_flag(&flag, "CVodeGetNumGEvals", 1);
+
+    printf("\nFinal Statistics:\n");
+    printf("nst = %-6ld nfe  = %-6ld nsetups = %-6ld nje = %ld\n", nst, nfe, nsetups, nje);
+    printf("nni = %-6ld ncfn = %-6ld netf = %-6ld    nge = %ld\n \n", nni, ncfn, netf, nge);
+
+    /* {% elif info.method == "cusparse" %} */
+
+    size_t cuSpInternalSize, cuSpWorkSize;
+
+    for (int i=0; i<n_stream_in_use_; i++) {
+
+        flag = CVodeGetNumSteps(cv_mem_[i], &nst);
+        check_flag(&flag, "CVodeGetNumSteps", 1);
+        flag = CVodeGetNumRhsEvals(cv_mem_[i], &nfe);
+        check_flag(&flag, "CVodeGetNumRhsEvals", 1);
+        flag = CVodeGetNumLinSolvSetups(cv_mem_[i], &nsetups);
+        check_flag(&flag, "CVodeGetNumLinSolvSetups", 1);
+        flag = CVodeGetNumErrTestFails(cv_mem_[i], &netf);
+        check_flag(&flag, "CVodeGetNumErrTestFails", 1);
+        flag = CVodeGetNumNonlinSolvIters(cv_mem_[i], &nni);
+        check_flag(&flag, "CVodeGetNumNonlinSolvIters", 1);
+        flag = CVodeGetNumNonlinSolvConvFails(cv_mem_[i], &ncfn);
+        check_flag(&flag, "CVodeGetNumNonlinSolvConvFails", 1);
+
+        flag = CVodeGetNumJacEvals(cv_mem_[i], &nje);
+        check_flag(&flag, "CVodeGetNumJacEvals", 1);
+
+        flag = CVodeGetNumGEvals(cv_mem_[i], &nge);
+        check_flag(&flag, "CVodeGetNumGEvals", 1);
+
+        SUNLinSol_cuSolverSp_batchQR_GetDeviceSpace(cv_ls_[i], &cuSpInternalSize, &cuSpWorkSize);
+
+        printf("\nFinal Statistics of %d stream:\n", i);
+        printf("nst = %-6ld nfe  = %-6ld nsetups = %-6ld nje = %ld\n", nst, nfe, nsetups, nje);
+        printf("nni = %-6ld ncfn = %-6ld netf = %-6ld    nge = %ld\n \n", nni, ncfn, netf, nge);
+        printf("cuSolverSp numerical factorization workspace size (in bytes) = %ld\n", cuSpWorkSize);
+        printf("cuSolverSp internal Q, R buffer size (in bytes) = %ld\n", cuSpInternalSize);
+    }
+    /* {% endif %} */
+
+    return NAUNET_SUCCESS;
+}
+
 int Naunet::Finalize() {
 
     /* {% if info.method == "dense" or info.method == "sparse" -%} */
