--- a/naunet/templates/cvode/include/naunet.h.j2
+++ b/naunet/templates/cvode/include/naunet.h.j2
@@ -76,11 +76,13 @@ PYBIND11_MODULE(PYMODNAME, m) {
     py::class_<Naunet>(m, "Naunet")
         .def(py::init())
         .def("Init", &Naunet::Init, py::arg("nsystem") = 1,
-             py::arg("atol") = 1e-20, py::arg("rtol") = 1e-5)
+             py::arg("atol") = 1e-20, py::arg("rtol") = 1e-5,
+             py::arg("mxsteps") = 500)
         .def("Finalize", &Naunet::Finalize)
 #ifdef USE_CUDA
         .def("Reset", &Naunet::Reset, py::arg("nsystem") = 1,
-             py::arg("atol") = 1e-20, py::arg("rtol") = 1e-5)
+             py::arg("atol") = 1e-20, py::arg("rtol") = 1e-5,
+             py::arg("mxsteps") = 500)
 #endif
         .def("Solve", &Naunet::PyWrapSolve);
 
